Updated by Oct24

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -44,9 +44,16 @@ layout: default
     {% if page.social %}
     <div class="social">
       {% include social.html %}
+      <a href="mailto:peng.li.scm@rutgers.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square fa-2x"></i> Email</a>
+      <a href="https://scholar.google.com/citations?user=cYCU2F8AAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square ai-2x"></i> Scholar</a>
+      <a href="https://www.linkedin.com/in/peng-li-21995b74/" class="author-social" target="_blank"><i class="ai ai-fw fa-linkedin-square"></i> LinkedIn</a><br> 
+
       <div class="contact-note">{{ site.contact_note }}</div>
     </div>
     {% endif %}
+
+
+
   </article>
 
 </div>
