--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
           <!-- About -->
           <li class="nav-item {% if page.title == 'about' %}active{% endif %}">
             <a class="nav-link" href="{{ '/' | relative_url }}">
-              about
+              About
               {% if page.title == "about" %}
                 <span class="sr-only">(current)</span>
               {% endif %}
@@ -41,7 +41,7 @@
           </li>
           {% if site.blog_name %}
           <!-- Blog -->
-          <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
+          <!-- <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
             <a class="nav-link" href="{{ '/blog/' | relative_url }}">
               blog
               {% if page.title == "blog" %}
@@ -49,7 +49,13 @@
               {% endif %}
             </a>
           </li>
-          {% endif %}
+          {% endif %} -->
+          <!-- Vitae -->
+          <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
+            <a class="nav-link" href= "{{ BASE_PATH}}/assets/pdf/Peng_Li_CV.pdf">
+              Vitae 
+            </a>
+          </li>
           <!-- Other pages -->
           {% assign sorted_pages = site.pages | sort: "title" %}
           {% for p in sorted_pages %}
